htmlファイル整形
コードの整形
index.htmlをコミットして、更新。４０４エラーのため。

--- a/head&foot.html
+++ b/head&foot.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <!-- Bootstrap 3.0.3 -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
@@ -14,10 +13,11 @@
   <link rel="stylesheet" type="text/css" href="css/5anshin.css">
   <link rel="stylesheet" type="text/css" href="css/7simple.css">
   <link rel="stylesheet" type="text/css" href="css/12threecards.css">
-
-
+    
+<!-- Googleフォント -->
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Montserrat&display=swap&subset=japanese" rel="stylesheet">
 
+<!-- CSSリンク -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/home.css">
@@ -25,7 +25,6 @@
     <title>中河内障がフォーラム</title>
 </head>
 <body>
-
 
 <header>
 <!--   PC・ナビ -->
@@ -67,8 +66,7 @@
                 <img class="sp-nav-close" src="./img/close.png" alt="">
               </label>
             </div>
-
-
+              
           <ul>
             <a href="#"><li>ホーム</li></a>
             <a href="#"><li>取組みと活動</li></a>
