html　パスの最適化
imgパスの変更

--- a/lowpages/activity.html
+++ b/lowpages/activity.html
@@ -114,7 +114,7 @@
     <div class="left">
 
       <!-- チラシはココ -->
-      <img src="../activity_jpeg/2019_1.jpg">
+      <img src="../img/activity_jpeg/2019_1.jpg">
       <div class="title">
         	<p>障がい児・者制度について考えるⅣ</p>
       </div>
@@ -162,7 +162,7 @@
 <!-- ボックス -->
   <div class="mini-box">
     <div class="left">
-      <img src="../activity_jpeg/2019_2.jpg">
+      <img src="../img/activity_jpeg/2019_2.jpg">
       <div class="title">
           <p>防災について考えるV</p>
       </div>
@@ -192,7 +192,7 @@
 <!-- ボックス -->
 <div class="mini-box">
   <div class="left">
-    <img src="../activity_jpeg/2019_3.jpg">
+    <img src="../img/activity_jpeg/2019_3.jpg">
     <div class="title">
         <p>差別解消法について考えるV</p>
     </div>
