パスの最適化
パスの最適化（各ページへの遷移）

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 <body>
 
+
 <header>
 <!--   PC・ナビ -->
     <div class="pc-nav">
@@ -35,11 +36,11 @@
         <small style="font-size: 12px; color: white;">中河内ブロック</small>
       </h2>
           <ul>
-            <li><a href="#">ホーム</a></li>
-            <li><a href="#">中河内障がいフォーラムとは</a></li>
-            <li><a href="#">取組みと活動</a></li>
-            <li><a href="#">構成団体・メンバー</a></li>
-            <li><a href="#">お問い合わせ</a></li>
+            <li><a href="#" style="border-bottom: solid 2px white; opacity: 1;">ホーム</a></li>
+            <li><a href="lowpages/what'sNDF.html">中河内障がいフォーラムとは</a></li>
+            <li><a href="lowpages/activity.html">取組みと活動</a></li>
+            <li><a href="lowpages/member.html">構成団体・メンバー</a></li>
+            <li><a href="lowpages/contact.html">お問い合わせ</a></li>
           </ul>
     </div>
 <!--   スマホ・ドロワーナビ -->
@@ -61,17 +62,20 @@
                 </p>
                 <small class="small-size">中河内ブロック</small>
               </div>
-              <h2 style="color: white;">MENU</h2>
-              <div>　　　　　</div>
+              <h2 style="color: white;width: 40%;">MENU</h2>
+              <label for="nav-input" style="margin: 0;">
+                <img class="sp-nav-close" src="img/close.png" alt="">
+              </label>
             </div>
-              
-            <ul>
-              <li><a href="#">ホーム</a></li>
-              <li><a href="#">取組みと活動</a></li>
-              <li><a href="#">中河内障がいフォーラムとは</a></li>
-              <li><a href="#">構成団体・メンバー</a></li>
-              <li><a href="#">お問い合わせ</a></li>
-            </ul>
+
+
+          <ul>
+            <a href="#"><li>ホーム</li></a>
+            <a href="lowpages/activity.html"><li>取組みと活動</li></a>
+            <a href="lowpages/what'sNDF.html"><li>中河内障がいフォーラムとは</li></a>
+            <a href="lowpages/member.html"><li>構成団体・メンバー</li></a>
+            <a href="lowpages/contact.html"><li>お問い合わせ</li></a>
+          </ul>
           </div>
       </div>
 </header>
@@ -170,6 +174,7 @@
  </div>
 </div>
 
+
 <!-- フッター -->
 <br>
 <footer>
@@ -185,7 +190,7 @@
           <li><a href="#">障害フォーラムについて</a></li>
         </ul>
       </div>
-      
+
       <div class="col-xs-12 col-sm-3 col-md-3">
         <h5>中河内障がいフォーラムとは</h5><hr>
         <ul style="list-style: none;">
@@ -220,16 +225,13 @@
       </div>
     </div>
     <div class="copy">
-        <small>&copy; 2020 中河内障がいフォーラム</small> 
+        <small>&copy; 2020  中河内障がフォーラム</small> 
     </div>
   </div>
  
 </footer>
 
 
-
-
-<!-- /ホーム -->
-<script src="js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
+<script src="../js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
