下層ページのファイル全て更新
下層ページのファイル全て更新
・パスの最適化

--- a/lowpages/what'sNDF.html
+++ b/lowpages/what'sNDF.html
@@ -25,55 +25,58 @@
     <title>中河内障がフォーラム</title>
 </head>
 <body>
-<header>
-<!--   PC・ナビ -->
-    <div class="pc-nav">
-      <h2>ODF
-        <span style="color: #F88674;">.</span>
-        <br>
-        <small style="font-size: 12px; color: white;">中河内ブロック</small>
-      </h2>
-          <ul>
-            <li><a href="#">ホーム</a></li>
-            <li><a href="#">中河内障がいフォーラムとは</a></li>
-            <li><a href="#">取組みと活動</a></li>
-            <li><a href="#">構成団体・メンバー</a></li>
-            <li><a href="#">お問い合わせ</a></li>
-          </ul>
-    </div>
-<!--   スマホ・ドロワーナビ -->
-      <div id="nav-drower">
-<!-- チェックボックス　常に非表示 -->
-          <input id="nav-input" type="checkbox" class="nav-unshown">
-<!-- 三アイコン　タップでinputがchecked -->
-          <label id="nav-open" for="nav-input"><span></span></label>
-<!-- 薄黒のカバー -->
-          <label class="nav-unshown" id="nav-close" for="nav-input"></label>
-<!-- スマホ・ナビに表示される中身 -->
-          <div id="nav-content">
-            <div class="sm-nav-flex">
-              <div class="sm-nav-menu">
-                <p style="font-size: 150%;">
-                  ODF
-                <span style="color: #F88674;">.</span>
-                <br>
-                </p>
-                <small class="small-size">中河内ブロック</small>
+  <header>
+    <!--   PC・ナビ -->
+        <div class="pc-nav">
+          <h2>ODF
+            <span style="color: #F88674;">.</span>
+            <br>
+            <small style="font-size: 12px; color: white;">中河内ブロック</small>
+          </h2>
+              <ul>
+                <li><a href="../index.html">ホーム</a></li>
+                <li><a href="#" style="border-bottom: solid 2px white; opacity: 1;">中河内障がいフォーラムとは</a></li>
+                <li><a href="../lowpages/activity.html">取組みと活動</a></li>
+                <li><a href="../lowpages/member.html">構成団体・メンバー</a></li>
+                <li><a href="../lowpages/contact.html">お問い合わせ</a></li>
+              </ul>
+        </div>
+    <!--   スマホ・ドロワーナビ -->
+          <div id="nav-drower">
+    <!-- チェックボックス　常に非表示 -->
+              <input id="nav-input" type="checkbox" class="nav-unshown">
+    <!-- 三アイコン　タップでinputがchecked -->
+              <label id="nav-open" for="nav-input"><span></span></label>
+    <!-- 薄黒のカバー -->
+              <label class="nav-unshown" id="nav-close" for="nav-input"></label>
+    <!-- スマホ・ナビに表示される中身 -->
+              <div id="nav-content">
+                <div class="sm-nav-flex">
+                  <div class="sm-nav-menu">
+                    <p style="font-size: 150%;">
+                      ODF
+                    <span style="color: #F88674;">.</span>
+                    <br>
+                    </p>
+                    <small class="small-size">中河内ブロック</small>
+                  </div>
+                  <h2 style="color: white;width: 40%;">MENU</h2>
+                  <label for="nav-input" style="margin: 0;">
+                    <img class="sp-nav-close" src="../img/close.png" alt="">
+                  </label>
+                </div>
+    
+    
+              <ul>
+                <a href="../index.html"><li>ホーム</li></a>
+                <a href="../lowpages/activity.html"><li>取組みと活動</li></a>
+                <a href="#"><li>中河内障がいフォーラムとは</li></a>
+                <a href="../lowpages/member.html"><li>構成団体・メンバー</li></a>
+                <a href="../lowpages/contact.html"><li>お問い合わせ</li></a>
+              </ul>
               </div>
-              <h2 style="color: white;">MENU</h2>
-              <div>　　　　　</div>
-            </div>
-
-          <ul>
-            <li><a href="#">ホーム</a></li>
-            <li><a href="#">取組みと活動</a></li>
-            <li><a href="#">中河内障がいフォーラムとは</a></li>
-            <li><a href="#">構成団体・メンバー</a></li>
-            <li><a href="#">お問い合わせ</a></li>
-          </ul>
           </div>
-      </div>
-</header>
+  </header>
 
 <!-- 中河内障がいフォーラムとは -->
 <div class="container">
