コピーライトの編集
コピーライトを編集しました

--- a/lowpages/member.html
+++ b/lowpages/member.html
@@ -313,7 +313,7 @@
       </div>
     </div>
     <div class="copy">
-        <small>&copy; 2020  shimpei kojima</small> 
+        <small>&copy; 2020  中河内障がいフォーラム</small> 
     </div>
   </div>
  
