--- a/lowpages/contact.html
+++ b/lowpages/contact.html
@@ -187,7 +187,7 @@
       </div>
     </div>
     <div class="copy">
-        <small>&copy; 2020  shimpei kojima</small> 
+        <small>&copy; 2020  中河内障がいフォーラム</small> 
     </div>
   </div>
  
