img height 400px to autoに変更
画像の高さを400pxからautoに変更

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <!-- ホームA -->
 <div id="home-a">
   <div class="dad">
-    <img id="home-a-img" src="img/home-a.png" alt="講演会の様子" width="100%" height="400px" style="object-fit: cover">
+    <img id="home-a-img" src="img/home-a.png" alt="講演会の様子" width="100%" height="auto" style="object-fit: cover">
    <!--  <img id="home-a-icon" src="img/NDF_logo.png" alt=""> -->
     <h1>中河内障がいフォーラム</h1>
   </div>
@@ -136,7 +136,7 @@
      <p>東大阪市、八尾市、柏原市の事業所やメンバーで構成され、「制度の勉強会」「講演会」等を開催して、2009年より活動を続けている団体です。</p>
    </div>
    <div class="col-12 col-sm-6 col-md-6">
-     <img src="img/home-c.png" alt="" width="100%" height="400px" style="object-fit: cover;">
+     <img src="img/home-c.png" alt="" width="100%" height="auto" style="object-fit: cover;">
    </div>
  </div>
 </div>
@@ -148,7 +148,7 @@
       <h2>障害フォーラムについて</h2>
     </div> -->
     <div class="col-12 col-sm-6 col-md-6" id="home-d-col-cards">
-      <img src="img/home-d.png" alt="" width="100%" height="400px" style="object-fit: cover;">
+      <img src="img/home-d.png" alt="" width="100%" height="auto" style="object-fit: cover;">
     </div>
 
     
