img height 400px to auto
画像の高さを400pxからautoに変更

--- a/lowpages/what'sNDF.html
+++ b/lowpages/what'sNDF.html
@@ -106,7 +106,7 @@
    </div> -->
    </div>
    <div class="col-12 col-sm-6 col-md-6">
-     <img src="../img/what-1.png" alt="" width="100%" height="400px" style="object-fit: cover;">
+     <img src="../img/what-1.png" alt="" width="100%" height="auto" style="object-fit: cover;">
    </div>
  </div>
 </div>
@@ -117,7 +117,7 @@
       <h2>障害フォーラムについて</h2>
     </div> -->
     <div class="col-12 col-sm-6 col-md-6" id="home-d-col-cards">
-      <img src="../img/what-2.png" alt="" width="100%" height="400px" style="object-fit: cover;">
+      <img src="../img/what-2.png" alt="" width="100%" height="auto" style="object-fit: cover;">
     </div>
 
     <div class="col-12 col-sm-6 col-md-6" id="home-e-col-cards">
