8月19日学習会のチラシ変更
8月19日の学習会のチラシ変更
コロナ延期のお知らせ分をコメントアウトしました

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
       <h4>「障がい者制度について考える」</h4>
       <!-- <p>精神障害者にとっての差別って何？</p> -->
       <p>講師：細井　清和氏（障大連）</p>
-      <p style="color: red;">※新型コロナウイルス感染防止のため延期とすることといたしました。</p>
+      <!-- <p style="color: red;">※新型コロナウイルス感染防止のため延期とすることといたしました。</p> -->
 
 
       <div class="button-typeA">
-        <a href="https://drive.google.com/file/d/1OAnznpWsLa7BMvEd1hROYyaTqnF84Jsb/view?usp=sharing" target="_blank" title="詳細リンク">ちょっと見てみる</a>
+        <a href="https://drive.google.com/file/d/1vwgjO-twHvA12mvo7d_N49qkJD_kWBa3/view?usp=sharing" target="_blank" title="詳細リンク">ちょっと見てみる</a>
       </div>
     </div>
     <div class="col-12 col-sm-6 col-md-6" id="home-b-col-two">
