おしらせ更新
学習会日時を入力しました

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <h4>「障がい者制度について考える」</h4>
       <!-- <p>精神障害者にとっての差別って何？</p> -->
       <p>講師：細井　清和氏（障大連）</p>
-      <!-- <p style="color: red;">※新型コロナウイルス感染防止のため延期とすることといたしました。</p> -->
+      <p style="color: #F88674;">8月19日(水)開催｜※定員20名</p>
 
 
       <div class="button-typeA">
