--- a/lowpages/member.html
+++ b/lowpages/member.html
@@ -240,7 +240,7 @@
     <div class="member col-12 col-sm-12 col-lg-3">
       <div class="card-box">
         <div class="text">
-          <h3>一般社団法人 AN-SHINH<br><small></small></h3>
+          <h3>一般社団法人 AN SHINH<br><small></small></h3>
 
           <div class="button-typeA">
               <a href="https://www.an-shinh.or.jp/" target="_blank" title="詳細リンク">こちら</a>
