学習会リンク変更学習会が終ったので、リンクをチラシから、当日の配布資料に変更

--- a/act/2019.html
+++ b/act/2019.html
@@ -43,7 +43,7 @@
             <ul>
                 <li><a href="../index.html">ホーム</a></li>
                 <li><a href="../lowpages/what_sNDF.html">中河内障がいフォーラムとは</a></li>
-                <li><a href="../act/2020.html" style="border-bottom: solid 2px white; opacity: 1;">取組みと活動</a></li>
+                <li><a href="/act/2020.html" style="border-bottom: solid 2px white; opacity: 1;">取組みと活動</a></li>
                 <li><a href="../lowpages/member.html">構成団体・メンバー</a></li>
                 <li><a href="../lowpages/contact.html">お問い合わせ</a></li>
             </ul>
@@ -280,63 +280,63 @@
     <!-- フッター -->
     <br>
     <footer>
-      <div class="container" id="home-footer">
-          <div class="row" id="home-footer-r">
+        <div class="container" id="home-footer">
+            <div class="row" id="home-footer-r">
 
-              <div class="col-xs-12 col-sm-3 col-md-3">
-                  <h5>ホーム</h5>
-                  <hr>
-                  <ul style="list-style: none;">
-                      <li><a href="index.html#A">新着情報</a></li>
-                      <li><a href="index.html#B">最近の活動</a></li>
-                      <li><a href="index.html#C">中河内障がいフォーラムについて</a></li>
-                      <li><a href="index.html#D">障害フォーラムについて</a></li>
-                  </ul>
-              </div>
+                <div class="col-xs-12 col-sm-3 col-md-3">
+                    <h5>ホーム</h5>
+                    <hr>
+                    <ul style="list-style: none;">
+                        <li><a href="index.html#A">新着情報</a></li>
+                        <li><a href="index.html#B">最近の活動</a></li>
+                        <li><a href="index.html#C">中河内障がいフォーラムについて</a></li>
+                        <li><a href="index.html#D">障害フォーラムについて</a></li>
+                    </ul>
+                </div>
 
-              <div class="col-xs-12 col-sm-3 col-md-3">
-                  <h5>中河内障がいフォーラムとは</h5>
-                  <hr>
-                  <ul style="list-style: none;">
-                      <li><a href="/lowpages/what_sNDF.html#A">略歴</a></li>
-                      <li><a href="/lowpages/what_sNDF.html#B">JDFとは</a></li>
-                      <li><a href="/lowpages/what_sNDF.html#C">ODFとは</a></li>
-                  </ul>
-              </div>
+                <div class="col-xs-12 col-sm-3 col-md-3">
+                    <h5>中河内障がいフォーラムとは</h5>
+                    <hr>
+                    <ul style="list-style: none;">
+                        <li><a href="/lowpages/what_sNDF.html#A">略歴</a></li>
+                        <li><a href="/lowpages/what_sNDF.html#B">JDFとは</a></li>
+                        <li><a href="/lowpages/what_sNDF.html#C">ODFとは</a></li>
+                    </ul>
+                </div>
 
-              <div class="col-xs-12 col-sm-3 col-md-3">
-                  <h5>取組みと活動</h5>
-                  <hr>
-                  <ul style="list-style: none;">
-                      <li><a href="/act/2020.html">2020年度</a></li>
-                      <li><a href="/act/2019.html">2019年度</a></li>
-                      <li><a href="/act/yet.html">2018年度</a></li>
-                      <li><a href="/act/yet.html">2017年度</a></li>
-                      <li><a href="/act/yet.html">2016年度</a></li>
-                  </ul>
-              </div>
+                <div class="col-xs-12 col-sm-3 col-md-3">
+                    <h5>取組みと活動</h5>
+                    <hr>
+                    <ul style="list-style: none;">
+                        <li><a href="/act/2020.html">2020年度</a></li>
+                        <li><a href="/act/2019.html">2019年度</a></li>
+                        <li><a href="/act/yet.html">2018年度</a></li>
+                        <li><a href="/act/yet.html">2017年度</a></li>
+                        <li><a href="/act/yet.html">2016年度</a></li>
+                    </ul>
+                </div>
 
-              <div class="col-xs-12 col-sm-3 col-md-3">
-                  <h5>構成団体・メンバー</h5>
-                  <hr>
-                  <ul style="list-style: none;">
-                      <li><a href="/lowpages/member.html">構成団体</a></li>
-                      <li><a href="/lowpages/member.html">メンバー</a></li>
-                  </ul>
-                  <br>
-                  <h5>お問い合わせ</h5>
-                  <hr>
-                  <ul style="list-style: none;">
-                      <li><a href="/lowpages/contact.html">お問い合わせ先</a></li>
-                  </ul>
-              </div>
-          </div>
-          <div class="copy">
-              <small>&copy; 2020 中河内障がフォーラム</small>
-          </div>
-      </div>
+                <div class="col-xs-12 col-sm-3 col-md-3">
+                    <h5>構成団体・メンバー</h5>
+                    <hr>
+                    <ul style="list-style: none;">
+                        <li><a href="/lowpages/member.html">構成団体</a></li>
+                        <li><a href="/lowpages/member.html">メンバー</a></li>
+                    </ul>
+                    <br>
+                    <h5>お問い合わせ</h5>
+                    <hr>
+                    <ul style="list-style: none;">
+                        <li><a href="/lowpages/contact.html">お問い合わせ先</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copy">
+                <small>&copy; 2020 中河内障がフォーラム</small>
+            </div>
+        </div>
 
-  </footer>
+    </footer>
 
 
     <script src="../js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
