--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172408331-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
         gtag('js', new Date());
 
         gtag('config', 'UA-172408331-1');
@@ -14,19 +18,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Bootstrap 3.0.3 -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/2form.css">
-  <link rel="stylesheet" type="text/css" href="css/3step.css">
-  <link rel="stylesheet" type="text/css" href="css/4dennis.css">
-  <link rel="stylesheet" type="text/css" href="css/5anshin.css">
-  <link rel="stylesheet" type="text/css" href="css/7simple.css">
-  <link rel="stylesheet" type="text/css" href="css/12threecards.css">
+    <!-- Bootstrap 3.0.3 -->
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/2form.css">
+    <link rel="stylesheet" type="text/css" href="css/3step.css">
+    <link rel="stylesheet" type="text/css" href="css/4dennis.css">
+    <link rel="stylesheet" type="text/css" href="css/5anshin.css">
+    <link rel="stylesheet" type="text/css" href="css/7simple.css">
+    <link rel="stylesheet" type="text/css" href="css/12threecards.css">
 
 
-<link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Montserrat&display=swap&subset=japanese" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Montserrat&display=swap&subset=japanese" rel="stylesheet">
 
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/nav.css">
@@ -34,214 +38,229 @@
 
     <title>中河内障がフォーラム</title>
 </head>
+
 <body>
 
 
-<header>
-<!--   PC・ナビ -->
-    <div class="pc-nav">
-      <h2>ODF
-        <span style="color: #F88674;">.</span>
-        <br>
-        <small style="font-size: 12px; color: white;">中河内ブロック</small>
-      </h2>
-          <ul>
-            <li><a href="#" style="border-bottom: solid 2px white; opacity: 1;">ホーム</a></li>
-            <li><a href="lowpages/what'sNDF.html">中河内障がいフォーラムとは</a></li>
-            <li><a href="lowpages/activity.html">取組みと活動</a></li>
-            <li><a href="lowpages/member.html">構成団体・メンバー</a></li>
-            <li><a href="lowpages/contact.html">お問い合わせ</a></li>
-          </ul>
-    </div>
-<!--   スマホ・ドロワーナビ -->
-      <div id="nav-drower">
-<!-- チェックボックス　常に非表示 -->
-          <input id="nav-input" type="checkbox" class="nav-unshown">
-<!-- 三アイコン　タップでinputがchecked -->
-          <label id="nav-open" for="nav-input"><span></span></label>
-<!-- 薄黒のカバー -->
-          <label class="nav-unshown" id="nav-close" for="nav-input"></label>
-<!-- スマホ・ナビに表示される中身 -->
-          <div id="nav-content">
-            <div class="sm-nav-flex">
-              <div class="sm-nav-menu">
-                <p style="font-size: 150%;">
-                  ODF
+    <header>
+        <!--   PC・ナビ -->
+        <div class="pc-nav">
+            <h2>ODF
                 <span style="color: #F88674;">.</span>
                 <br>
+                <small style="font-size: 12px; color: white;">中河内ブロック</small>
+            </h2>
+            <ul>
+                <li><a href="/index.html" style="border-bottom: solid 2px white; opacity: 1;">ホーム</a></li>
+                <li><a href="lowpages/what_sNDF.html">中河内障がいフォーラムとは</a></li>
+                <li><a href="/act/2020.html">取組みと活動</a></li>
+                <li><a href="lowpages/member.html">構成団体・メンバー</a></li>
+                <li><a href="lowpages/contact.html">お問い合わせ</a></li>
+            </ul>
+        </div>
+        <!--   スマホ・ドロワーナビ -->
+        <div id="nav-drower">
+            <!-- チェックボックス　常に非表示 -->
+            <input id="nav-input" type="checkbox" class="nav-unshown">
+            <!-- 三アイコン　タップでinputがchecked -->
+            <label id="nav-open" for="nav-input"><span></span></label>
+            <!-- 薄黒のカバー -->
+            <label class="nav-unshown" id="nav-close" for="nav-input"></label>
+            <!-- スマホ・ナビに表示される中身 -->
+            <div id="nav-content">
+                <div class="sm-nav-flex">
+                    <div class="sm-nav-menu">
+                        <p style="font-size: 150%;">
+                            ODF
+                            <span style="color: #F88674;">.</span>
+                            <br>
+                        </p>
+                        <small class="small-size">中河内ブロック</small>
+                    </div>
+                    <h2 style="color: white;width: 40%;">MENU</h2>
+                    <label for="nav-input" style="margin: 0;">
+            <img class="sp-nav-close" src="img/close.png" alt="">
+          </label>
+                </div>
+
+
+                <ul>
+                    <a href="index.html">
+                        <li>ホーム</li>
+                    </a>
+                    <a href="/act/2020.html">
+                        <li>取組みと活動</li>
+                    </a>
+                    <a href="/act/2020.html"></a>
+                        <li>中河内障がいフォーラムとは</li>
+                    </a>
+                    <a href="lowpages/member.html">
+                        <li>構成団体・メンバー</li>
+                    </a>
+                    <a href="lowpages/contact.html">
+                        <li>お問い合わせ</li>
+                    </a>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <!-- ホーム -->
+
+    <!-- ホームA -->
+    <div id="home-a">
+        <div class="dad">
+            <img id="home-a-img" src="img/home-a.png" alt="講演会の様子" width="100%" height="auto" style="object-fit: cover">
+            <!--  <img id="home-a-icon" src="img/NDF_logo.png" alt=""> -->
+            <h1>中河内障がいフォーラム</h1>
+        </div>
+    </div>
+
+    <!-- ホームB -->
+    <div class="container" id="home-b-con">
+        <div class="row" id="home-b-r">
+            <div class="col-12 col-sm-6 col-md-6" id="home-b-col-one">
+
+                <!-- 記事変更箇所 -->
+                <h3 id="A">新着情報</h3>
+                <h4>「差別解消法について考えるⅥ」</h4>
+                <p>
+                    講師：阪本　美津雄（CILやお）<br>
                 </p>
-                <small class="small-size">中河内ブロック</small>
-              </div>
-              <h2 style="color: white;width: 40%;">MENU</h2>
-              <label for="nav-input" style="margin: 0;">
-                <img class="sp-nav-close" src="img/close.png" alt="">
-              </label>
+
+
+                <div class="button-typeA">
+                    <a href="https://drive.google.com/file/d/1Gi3OoW_-zV71B8wEZE_pi5PmUCevyfLf/view?usp=sharing" target="_blank" title="詳細リンク">ちょっと見てみる</a>
+                </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-6" id="home-b-col-two">
+
+                <!-- 記事変更箇所 -->
+                <h3 id="B">最近の活動</h3>
+                <h4>「障がい者制度について考える」</h4>
+                <p>講師：細井　清和氏（障大連）</p>
+
+                <div class="button-typeA">
+                    <a href="https://drive.google.com/drive/folders/1vMWTYFG378_sLR5Ar3ds2P1PIwGWPUdK?usp=sharing" target="_blank" title="詳細リンク">ちょっと見てみる</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <!-- ホームC -->
+    <div class="container" id="home-b-c-con">
+        <div class="row" id="home-c-r">
+            <!--    <div class="col-12">
+    <h3>障害フォーラムについて</h3>
+   </div> -->
+            <div class="col-12 col-sm-6 col-md-6" id="home-c-col-cards">
+                <h3 id="C">中河内障がいフォーラムとは</h3>
+                <p>東大阪市、八尾市、柏原市の事業所やメンバーで構成され、「制度の勉強会」「講演会」等を開催して、2009年より活動を続けている団体です。</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-6">
+                <img src="img/home-c.png" alt="" width="100%" height="auto" style="object-fit: cover;">
+            </div>
+        </div>
+    </div>
+
+    <!-- ホームD -->
+    <div class="container" id="home-b-c-con">
+        <div class="row" id="home-d-r">
+            <!-- <div class="col-12">
+      <h2>障害フォーラムについて</h2>
+    </div> -->
+            <div class="col-12 col-sm-6 col-md-6" id="home-d-col-cards">
+                <img src="img/home-d.png" alt="" width="100%" height="auto" style="object-fit: cover;">
             </div>
 
 
-          <ul>
-            <a href="#"><li>ホーム</li></a>
-            <a href="lowpages/activity.html"><li>取組みと活動</li></a>
-            <a href="lowpages/what'sNDF.html"><li>中河内障がいフォーラムとは</li></a>
-            <a href="lowpages/member.html"><li>構成団体・メンバー</li></a>
-            <a href="lowpages/contact.html"><li>お問い合わせ</li></a>
-          </ul>
-          </div>
-      </div>
-</header>
 
-<!-- ホーム -->
+            <div class="col-12 col-sm-6 col-md-6" id="home-e-col-cards">
+                <h3 id="D">障害フォーラムとは</h3>
+                <p>
+                    全国の障害者団体で構成された民間団体です。<br>中河内障がいフォーラムの上部団体に「大阪障害フォーラム」、「日本障害フォーラム」があります。
+                </p>
+                <br>
 
-<!-- ホームA -->
-<div id="home-a">
-  <div class="dad">
-    <img id="home-a-img" src="img/home-a.png" alt="講演会の様子" width="100%" height="auto" style="object-fit: cover">
-   <!--  <img id="home-a-icon" src="img/NDF_logo.png" alt=""> -->
-    <h1>中河内障がいフォーラム</h1>
-  </div>
-</div>
+                <h4>日本障害フォーラム（JDF）</h4>
+                <p>
+                    2004年に設立、全国13の障害者団体で構成された民間団体。
+                </p>
+                <br>
+                <h4>大阪障害フォーラム（ODF）</h4>
+                <p>
+                    2009年9月15日に結成した大阪府下の幅広い障害者団体による共同の組織です。
+                </p>
+            </div>
 
-<!-- ホームB -->
-<div class="container" id="home-b-con">
-  <div class="row" id="home-b-r">
-    <div class="col-12 col-sm-6 col-md-6" id="home-b-col-one">
-
-<!-- 記事変更箇所 -->
-      <h3>新着情報</h3>
-      <h4>「障がい者制度について考える」</h4>
-      <!-- <p>精神障害者にとっての差別って何？</p> -->
-      <p>講師：細井　清和氏（障大連）</p>
-      <p style="color: #F88674;">8月19日(水)開催｜※定員20名</p>
-
-
-      <div class="button-typeA">
-        <a href="https://drive.google.com/file/d/1vwgjO-twHvA12mvo7d_N49qkJD_kWBa3/view?usp=sharing" target="_blank" title="詳細リンク">ちょっと見てみる</a>
-      </div>
-    </div>
-    <div class="col-12 col-sm-6 col-md-6" id="home-b-col-two">
-
-<!-- 記事変更箇所 -->
-      <h3>最近の活動</h3>
-      <h4>「差別解消法について考えるV」</h4>
-      <p>精神障害者にとっての差別って何？<br>
-      講師：山本　深雪氏（ぼちぼちクラブ代表）</p>
-
-
-      <div class="button-typeA">
-        <a href="https://drive.google.com/file/d/1y3c_1RF9v_0b0nlET4vXNJwMS3-q_QDe/view?usp=sharing" target="_blank" title="詳細リンク">ちょっと見てみる</a>
-      </div>
-    </div>
-    </div>
-  </div>
-</div>
-
-<!-- ホームC -->
-<div class="container" id="home-b-c-con">
- <div class="row" id="home-c-r">
-<!--    <div class="col-12">
-    <h3>障害フォーラムについて</h3>
-   </div> -->
-   <div class="col-12 col-sm-6 col-md-6" id="home-c-col-cards">
-     <h3>中河内障がいフォーラムとは</h3>
-     <p>東大阪市、八尾市、柏原市の事業所やメンバーで構成され、「制度の勉強会」「講演会」等を開催して、2009年より活動を続けている団体です。</p>
-   </div>
-   <div class="col-12 col-sm-6 col-md-6">
-     <img src="img/home-c.png" alt="" width="100%" height="auto" style="object-fit: cover;">
-   </div>
- </div>
-</div>
-
-<!-- ホームD -->
-<div class="container" id="home-b-c-con">
- <div class="row" id="home-d-r">
-    <!-- <div class="col-12">
-      <h2>障害フォーラムについて</h2>
-    </div> -->
-    <div class="col-12 col-sm-6 col-md-6" id="home-d-col-cards">
-      <img src="img/home-d.png" alt="" width="100%" height="auto" style="object-fit: cover;">
+        </div>
     </div>
 
-    
 
-    <div class="col-12 col-sm-6 col-md-6" id="home-e-col-cards">
-      <h3>障害フォーラムとは</h3>
-      <p>
-        全国の障害者団体で構成された民間団体です。<br>中河内障がいフォーラムの上部団体に「大阪障害フォーラム」、「日本障害フォーラム」があります。
-      </p>
-      <br>
+    <!-- フッター -->
+    <br>
+    <footer>
+        <div class="container" id="home-footer">
+            <div class="row" id="home-footer-r">
 
-      <h4>日本障害フォーラム（JDF）</h4>
-      <p>
-        2004年に設立、全国13の障害者団体で構成された民間団体。
-      </p>
-      <br>
-      <h4>大阪障害フォーラム（ODF）</h4>
-      <p>
-        2009年9月15日に結成した大阪府下の幅広い障害者団体による共同の組織です。
-      </p>
-   </div>
+                <div class="col-xs-12 col-sm-3 col-md-3">
+                    <h5>ホーム</h5>
+                    <hr>
+                    <ul style="list-style: none;">
+                        <li><a href="index.html#A">新着情報</a></li>
+                        <li><a href="index.html#B">最近の活動</a></li>
+                        <li><a href="index.html#C">中河内障がいフォーラムについて</a></li>
+                        <li><a href="index.html#D">障害フォーラムについて</a></li>
+                    </ul>
+                </div>
 
- </div>
-</div>
+                <div class="col-xs-12 col-sm-3 col-md-3">
+                    <h5>中河内障がいフォーラムとは</h5>
+                    <hr>
+                    <ul style="list-style: none;">
+                        <li><a href="/lowpages/what_sNDF.html#A">略歴</a></li>
+                        <li><a href="/lowpages/what_sNDF.html#B">JDFとは</a></li>
+                        <li><a href="/lowpages/what_sNDF.html#C">ODFとは</a></li>
+                    </ul>
+                </div>
 
+                <div class="col-xs-12 col-sm-3 col-md-3">
+                    <h5>取組みと活動</h5>
+                    <hr>
+                    <ul style="list-style: none;">
+                        <li><a href="/act/2020.html">2020年度</a></li>
+                        <li><a href="/act/2019.html">2019年度</a></li>
+                        <li><a href="/act/yet.html">2018年度</a></li>
+                        <li><a href="/act/yet.html">2017年度</a></li>
+                        <li><a href="/act/yet.html">2016年度</a></li>
+                    </ul>
+                </div>
 
-<!-- フッター -->
-<br>
-<footer>
-  <div class="container" id="home-footer">
-    <div class="row" id="home-footer-r">
+                <div class="col-xs-12 col-sm-3 col-md-3">
+                    <h5>構成団体・メンバー</h5>
+                    <hr>
+                    <ul style="list-style: none;">
+                        <li><a href="/lowpages/member.html">構成団体</a></li>
+                        <li><a href="/lowpages/member.html">メンバー</a></li>
+                    </ul>
+                    <br>
+                    <h5>お問い合わせ</h5>
+                    <hr>
+                    <ul style="list-style: none;">
+                        <li><a href="/lowpages/contact.html">お問い合わせ先</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="copy">
+                <small>&copy; 2020 中河内障がフォーラム</small>
+            </div>
+        </div>
 
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <h5>ホーム</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">新着情報</a></li>
-          <li><a href="#">最近の活動</a></li>
-          <li><a href="#">中河内障がいフォーラムについて</a></li>
-          <li><a href="#">障害フォーラムについて</a></li>
-        </ul>
-      </div>
-
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <h5>中河内障がいフォーラムとは</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">略歴</a></li>
-          <li><a href="#">JDFとは</a></li>
-          <li><a href="#">ODFとは</a></li>
-        </ul>
-      </div>
-
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <h5>取組みと活動</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">2020年度</a></li>
-          <li><a href="#">2019年度</a></li>
-          <li><a href="#">2018年度</a></li>
-          <li><a href="#">2017年度</a></li>
-          <li><a href="#">2016年度</a></li>
-        </ul>
-      </div>
-
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <h5>構成団体・メンバー</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">構成団体</a></li>
-          <li><a href="#">メンバー</a></li>
-        </ul>
-        <br>
-        <h5>お問い合わせ</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">お問い合わせ先</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="copy">
-        <small>&copy; 2020  中河内障がフォーラム</small> 
-    </div>
-  </div>
- 
-</footer>
+    </footer>
 
 
-<script src="../js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
+    <script src="../js/bootstrap.min.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
+
 </html>
