--- a/lowpages/contact.html
+++ b/lowpages/contact.html
@@ -38,10 +38,10 @@
           </h2>
               <ul>
                 <li><a href="../index.html">ホーム</a></li>
-                <li><a href="../lowpages/what'sNDF.html">中河内障がいフォーラムとは</a></li>
-                <li><a href="../lowpages/activity.html">取組みと活動</a></li>
+                <li><a href="../lowpages/what_sNDF.html">中河内障がいフォーラムとは</a></li>
+                <li><a href="/act/2020.html">取組みと活動</a></li>
                 <li><a href="../lowpages/member.html">構成団体・メンバー</a></li>
-                <li><a href="#" style="border-bottom: solid 2px white; opacity: 1;">お問い合わせ</a></li>
+                <li><a href="/lowpages/contact.html" style="border-bottom: solid 2px white; opacity: 1;">お問い合わせ</a></li>
               </ul>
         </div>
     <!--   スマホ・ドロワーナビ -->
@@ -72,10 +72,10 @@
     
               <ul>
                 <a href="../index.html"><li>ホーム</li></a>
-                <a href="../lowpages/activity.html"><li>取組みと活動</li></a>
-                <a href="../lowpages/what'sNDF.html"><li>中河内障がいフォーラムとは</li></a>
+                <a href="/act/2020.html"><li>取組みと活動</li></a>
+                <a href="../lowpages/what_sNDF.html"><li>中河内障がいフォーラムとは</li></a>
                 <a href="../lowpages/member.html"><li>構成団体・メンバー</li></a>
-                <a href="#"><li>お問い合わせ</li></a>
+                <a href="/lowpages/contact.html"><li>お問い合わせ</li></a>
               </ul>
               </div>
           </div>
@@ -141,56 +141,61 @@
 <br>
 <footer>
   <div class="container" id="home-footer">
-    <div class="row" id="home-footer-r">
+      <div class="row" id="home-footer-r">
 
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <h5>ホーム</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">新着情報</a></li>
-          <li><a href="#">最近の活動</a></li>
-          <li><a href="#">中河内障がいフォーラムについて</a></li>
-          <li><a href="#">障害フォーラムについて</a></li>
-        </ul>
-      </div>
-      
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <h5>中河内障がいフォーラムとは</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">略歴</a></li>
-          <li><a href="#">JDFとは</a></li>
-          <li><a href="#">ODFとは</a></li>
-        </ul>
-      </div>
+          <div class="col-xs-12 col-sm-3 col-md-3">
+              <h5>ホーム</h5>
+              <hr>
+              <ul style="list-style: none;">
+                <li><a href="/index.html#A">新着情報</a></li>
+                <li><a href="/index.html#B">最近の活動</a></li>
+                <li><a href="/index.html#C">中河内障がいフォーラムについて</a></li>
+                <li><a href="/index.html#D">障害フォーラムについて</a></li>
+            </ul>
+          </div>
 
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <h5>取組みと活動</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">2020年度</a></li>
-          <li><a href="#">2019年度</a></li>
-          <li><a href="#">2018年度</a></li>
-          <li><a href="#">2017年度</a></li>
-          <li><a href="#">2016年度</a></li>
-        </ul>
-      </div>
+          <div class="col-xs-12 col-sm-3 col-md-3">
+              <h5>中河内障がいフォーラムとは</h5>
+              <hr>
+              <ul style="list-style: none;">
+                  <li><a href="/lowpages/what_sNDF.html#A">略歴</a></li>
+                  <li><a href="/lowpages/what_sNDF.html#B">JDFとは</a></li>
+                  <li><a href="/lowpages/what_sNDF.html#C">ODFとは</a></li>
+              </ul>
+          </div>
 
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <h5>構成団体・メンバー</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">構成団体</a></li>
-          <li><a href="#">メンバー</a></li>
-        </ul>
-        <br>
-        <h5>お問い合わせ</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">お問い合わせ先</a></li>
-        </ul>
+          <div class="col-xs-12 col-sm-3 col-md-3">
+              <h5>取組みと活動</h5>
+              <hr>
+              <ul style="list-style: none;">
+                  <li><a href="/act/2020.html">2020年度</a></li>
+                  <li><a href="/act/2019.html">2019年度</a></li>
+                  <li><a href="/act/yet.html">2018年度</a></li>
+                  <li><a href="/act/yet.html">2017年度</a></li>
+                  <li><a href="/act/yet.html">2016年度</a></li>
+              </ul>
+          </div>
+
+          <div class="col-xs-12 col-sm-3 col-md-3">
+              <h5>構成団体・メンバー</h5>
+              <hr>
+              <ul style="list-style: none;">
+                  <li><a href="/lowpages/member.html">構成団体</a></li>
+                  <li><a href="/lowpages/member.html">メンバー</a></li>
+              </ul>
+              <br>
+              <h5>お問い合わせ</h5>
+              <hr>
+              <ul style="list-style: none;">
+                  <li><a href="/lowpages/contact.html">お問い合わせ先</a></li>
+              </ul>
+          </div>
       </div>
-    </div>
-    <div class="copy">
-        <small>&copy; 2020  中河内障がいフォーラム</small> 
-    </div>
+      <div class="copy">
+          <small>&copy; 2020 中河内障がフォーラム</small>
+      </div>
   </div>
- 
+
 </footer>
 
 
