--- a/lowpages/what_sNDF.html
+++ b/lowpages/what_sNDF.html
@@ -35,8 +35,8 @@
           </h2>
               <ul>
                 <li><a href="../index.html">ホーム</a></li>
-                <li><a href="#" style="border-bottom: solid 2px white; opacity: 1;">中河内障がいフォーラムとは</a></li>
-                <li><a href="../lowpages/activity.html">取組みと活動</a></li>
+                <li><a href="/lowpages/what_sNDF.html" style="border-bottom: solid 2px white; opacity: 1;">中河内障がいフォーラムとは</a></li>
+                <li><a href="/act/2020.html">取組みと活動</a></li>
                 <li><a href="../lowpages/member.html">構成団体・メンバー</a></li>
                 <li><a href="../lowpages/contact.html">お問い合わせ</a></li>
               </ul>
@@ -69,8 +69,8 @@
     
               <ul>
                 <a href="../index.html"><li>ホーム</li></a>
-                <a href="../lowpages/activity.html"><li>取組みと活動</li></a>
-                <a href="#"><li>中河内障がいフォーラムとは</li></a>
+                <a href="/act/2020.html"><li>取組みと活動</li></a>
+                <a href="/lowpages/what_sNDF.html"><li>中河内障がいフォーラムとは</li></a>
                 <a href="../lowpages/member.html"><li>構成団体・メンバー</li></a>
                 <a href="../lowpages/contact.html"><li>お問い合わせ</li></a>
               </ul>
@@ -97,7 +97,7 @@
    <div class="col-12">
    </div>
    <div class="col-12 col-sm-6 col-md-6" id="home-c-col-cards">
-     <h2>2009年に始まりました</h2>
+     <h2 id="A">2009年に始まりました</h2>
      <p>
      「中河内障害フォーラム」は、２００９年６月に八尾市で開催された「障害者権利条約タウンミーティングｉｎ中河内」の実行委員がベースとなり、その後も継続的な「制度の勉強会」「講演会」等を開催して、活動を続けている団体です。
    </p>
@@ -137,14 +137,14 @@
 <div class="container" id="home-b-con">
   <div class="row" id="home-b-r">
     <div class="col-12 col-sm-6 col-md-6" id="home-b-col-one">
-      <h3>JDF 日本障害フォーラム</h3>
+      <h3 id="B">JDF 日本障害フォーラム</h3>
       <p style="text-align: left;">「アジア太平洋障害者の十年」及び我が国の障害者施策を推進するとともに、障害のある人の権利を推進することを目的に、障害者団体を中心として２００４年に設立されました。</p>
       <div class="button-typeA">
         <a href="https://www.normanet.ne.jp/~jdf/" target="_blank" title="詳細リンク">JDFのページへ</a>
       </div>
     </div>
     <div class="col-12 col-sm-6 col-md-6" id="home-b-col-two">
-      <h3>ODF 大阪障害フォーラム</h3>
+      <h3 id="C">ODF 大阪障害フォーラム</h3>
       <p style="text-align: left;">２００９年９月１５日に結成した大阪府下の幅広い障害者団体による共同の組織で、“障害の種別を越えて大きなうねりを創り出そう～障害者が差別なく暮らせる大阪を”の願いをかなえる為に様々な活動を推進しています。</p>
       <div class="button-typeA">
         <a href="http://odf.xtr.jp/" target="_blank" title="詳細リンク">ODFのページへ</a>
@@ -158,56 +158,61 @@
 <br>
 <footer>
   <div class="container" id="home-footer">
-    <div class="row" id="home-footer-r">
+      <div class="row" id="home-footer-r">
 
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <h5>ホーム</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">新着情報</a></li>
-          <li><a href="#">最近の活動</a></li>
-          <li><a href="#">中河内障がいフォーラムについて</a></li>
-          <li><a href="#">障害フォーラムについて</a></li>
-        </ul>
-      </div>
-      
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <h5>中河内障がいフォーラムとは</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">略歴</a></li>
-          <li><a href="#">JDFとは</a></li>
-          <li><a href="#">ODFとは</a></li>
-        </ul>
-      </div>
+          <div class="col-xs-12 col-sm-3 col-md-3">
+              <h5>ホーム</h5>
+              <hr>
+              <ul style="list-style: none;">
+                <li><a href="/index.html#A">新着情報</a></li>
+                <li><a href="/index.html#B">最近の活動</a></li>
+                <li><a href="/index.html#C">中河内障がいフォーラムについて</a></li>
+                <li><a href="/index.html#D">障害フォーラムについて</a></li>
+            </ul>
+          </div>
 
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <h5>取組みと活動</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">2020年度</a></li>
-          <li><a href="#">2019年度</a></li>
-          <li><a href="#">2018年度</a></li>
-          <li><a href="#">2017年度</a></li>
-          <li><a href="#">2016年度</a></li>
-        </ul>
-      </div>
+          <div class="col-xs-12 col-sm-3 col-md-3">
+              <h5>中河内障がいフォーラムとは</h5>
+              <hr>
+              <ul style="list-style: none;">
+                  <li><a href="/lowpages/what_sNDF.html#A">略歴</a></li>
+                  <li><a href="/lowpages/what_sNDF.html#B">JDFとは</a></li>
+                  <li><a href="/lowpages/what_sNDF.html#C">ODFとは</a></li>
+              </ul>
+          </div>
 
-      <div class="col-xs-12 col-sm-3 col-md-3">
-        <h5>構成団体・メンバー</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">構成団体</a></li>
-          <li><a href="#">メンバー</a></li>
-        </ul>
-        <br>
-        <h5>お問い合わせ</h5><hr>
-        <ul style="list-style: none;">
-          <li><a href="#">お問い合わせ先</a></li>
-        </ul>
+          <div class="col-xs-12 col-sm-3 col-md-3">
+              <h5>取組みと活動</h5>
+              <hr>
+              <ul style="list-style: none;">
+                  <li><a href="/act/2020.html">2020年度</a></li>
+                  <li><a href="/act/2019.html">2019年度</a></li>
+                  <li><a href="/act/yet.html">2018年度</a></li>
+                  <li><a href="/act/yet.html">2017年度</a></li>
+                  <li><a href="/act/yet.html">2016年度</a></li>
+              </ul>
+          </div>
+
+          <div class="col-xs-12 col-sm-3 col-md-3">
+              <h5>構成団体・メンバー</h5>
+              <hr>
+              <ul style="list-style: none;">
+                  <li><a href="/lowpages/member.html">構成団体</a></li>
+                  <li><a href="/lowpages/member.html">メンバー</a></li>
+              </ul>
+              <br>
+              <h5>お問い合わせ</h5>
+              <hr>
+              <ul style="list-style: none;">
+                  <li><a href="/lowpages/contact.html">お問い合わせ先</a></li>
+              </ul>
+          </div>
       </div>
-    </div>
-    <div class="copy">
-        <small>&copy; 2020  中河内障がいフォーラム</small> 
-    </div>
+      <div class="copy">
+          <small>&copy; 2020 中河内障がフォーラム</small>
+      </div>
   </div>
- 
+
 </footer>
 
 
